2008-01-15 Kazuhiko
* Sync with erp5_xhtml_style (r.24958).

2008-01-02 Nicolas
* Display Url Columns in listbox

2007-12-10 Nicolas
* Add new Skin: Mobile

2007-10-11 Yusei
* Modified ListBox_asHTML. This changes depends on ERP5Form changes. Please upgrade ERP5Form revision 16942 or above.

2007-09-19 Kazuhiko
* use portal_url.getPortalObject().absolute_url() instead of portal_url.getPortalPath() for better virtual host support.